# CellSurf

./: .gitignore  README.html  README.md  pyproject.toml  requirements.txt  sandbox.ipynb
Min3D/: ce_me_x.py
Min3D/core/: alpha_shape_helper.py  checkpoints.py  geometry_container.py  graph_container.py  mesh_container.py  point_cloud_container.py  wireframe_container.py
Min3D/core/containers/: geometry_base.py  path_3d.py
Min3D/core/decorators/: __init__.py  auto_checkpoint.py  auto_log.py
Min3D/core/framework/: point_cloud.py  surface_graph.py  surface_mesh.py  surface_wireframe.py  unique_surface_wireframe.py
Min3D/core/helpers/: alpha_shape_helper.py  geo_shape_helper.py
Min3D/core/simulators/: __init__.py  circle.py  cube.py  cylinder.py  ellipsoid.py  gaussian_blob.py  gaussian_corona.py  gaussian_noise.py  hollow_cylinder.py  sphere.py
Min3D/core/util/: __init__.py  distance_from_line.py  distance_from_point.py  geometry_transformation_tool.py  make_3d_path.py
Min3D/core/visualization/: draw_3d_dataset.py  shortest_path_interactive.py  (+1 more)
Tutorials/: hollow_cylinder.ipynb
cellnav/: __init__.py
cellnav/generators/: __init__.py  circle.py  cube.py  cylinder.py  ellipsoid.py  gaussian_blob.py  gaussian_corona.py  gaussian_noise.py  hollow_cylinder.py  sphere.py
cellnav/util/: __init__.py  distance_from_line.py  distance_from_point.py  geometry_transformer.py  make_3d_path.py
cellnav/visualization/: __init__.py  draw_3d_dataset.py  draw_3d_path.py  shortest_path_interactive.py  shortest_path_mpl.py  time_complexity_overview.py
cellsurf/: __init__.py
tutorials/: 3d_path_visualization.ipynb  hollow_cylinder_pathfinding.ipynb
(+26 files in other folders)
