[tool.poetry]
name = "cellnav"
version = "0.0.7"
description = "A framework implementation to of 3D methods for data representation, surface reconstruction and geodesic distance measures built on top of the Open3D and rustworkx libraries. The framework is designed to be easily extendable and to provide a unified interface for different methods. It is intended to be used for research and development in the field of 3D data processing and analysis."
authors = ["Bela Vogler <bela.vogler@uni-jena.de>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.15,>=3.12"
numpy = "^2.4.6"
matplotlib = "^3.11.0"
tqdm = "^4.68.2"
open3d = "^0.19.0"
pltstyler = "^0.0.7"
overrides = "^7.7.0"
rustworkx = "^0.17.1"
pymeshfix = "^0.18.1"
pyfiledialogue = "^0.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
